# emulator

./: .gitignore  DISPLAY_FIX_SUMMARY.md  FIXED_ISSUES_SUMMARY.md  FIX_INSTRUCTIONS.md  FIX_SUMMARY.md  IMPLEMENTATION_NOTES.md  LATEST_CHANGES.md  LICENSE  README.md  README_FIX.md  README_WINDOWS.md  UPDATE.md  WINDOWS_FIX_SUMMARY.md  WINDOWS_FIX_VERIFICATION.md  WINDOWS_GUI_FIX.md  android_emulator.html  direct_launch.py  enhanced_windows_launcher.bat  fix_emulator.py  fix_sensor_simulator.patch  improved_windows_launcher.py  install_requirements.py  linkedin_detection.html  main.py  pyproject.toml  run_emulator.bat  run_qemu.bat  setup.bat  setup.py  setup.sh  simulate_android_image.py  status.md  test_ml_sensors.py  test_runner.py  test_windows_fix.py  windows_display_fix.py  windows_gui_fix_fixed.py
src/anti_detection/: README.md  device_profiles.py  frida_manager.py  hardware_spoof.py  ml_sensor_generator.py  sensor_simulator.py
src/anti_detection/frida_scripts/: default_launcher.js  detection_bypass.js  linkedin_bypass.js
src/core/: README.md  android_customizer.py  image_manager.py  qemu_wrapper.py
src/gui/: README.md  device_profile_dialog.py  device_profile_widget.py  emulator_gui.py  emulator_gui.py.bak  image_download_widget.py  updated_emulator_gui.py
src/test/: automated_detection_test.py  linkedin_detection_test.py
src/utils/: README.md  android_x86_downloader.py  device_profile_db.py
